working on about section

--- a/style.css
+++ b/style.css
@@ -154,3 +154,11 @@ span {
 .btn:hover {
     box-shadow: none;
 }
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--snd-bg-color);
+}
