--- a/style.css
+++ b/style.css
@@ -378,6 +378,60 @@ span {
     color: var(--snd-bg-color);
 }
 
+.about-container {
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: var(--text-color);
+    border-radius: 2rem;
+    border-color: var(--text-color);
+    text-align: center;
+    background-color: var(--snd-bg-color);
+}
+
+.skills {
+    position: relative;
+}
+
+.skills-sub-title {
+    color: var(--text-color);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.skills-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article i {
+    cursor: pointer;
+}
+
 
 /* Media Query Stuff */
 
